@@ -1,3 +1,11 @@
+2004-05-15 Scott Dattalo <scott@dattalo.com>
+	* src/xref.h, xref.cc: added get_value() member function to XrefObject class
+	* gui/gui.h, gui/gui_break.cc, gui/gui_main.cc, gui/gui_processor.cc,
+	gui/gui_regwin.cc, gui/gui_regwin.h, gui/gui_statusbar.cc:
+	Converted the structure labeled_entry into a class and renamed it
+	to LabeledEntry.
+	* gui/gui_statusbar.h: Added.
+
 2004-05-12 Scott Dattalo <scott@dattalo.com>
 	* src/stimuli.cc: bi-directional I/O pins were not working properly
 	with modules.
